# reindeerdrone

./: .gitignore  README.md  config.example.yaml  config.yaml  dataset.py  predict.py  pyproject.toml  requirements.txt  train.py  utils.py
notebooks/: analysis.ipynb  analysis_utils.py  final-report.ipynb  inspect-bboxs.ipynb  inspect-bboxs.py  look-at-hf.ipynb  recall-precision.py  to_present.py
predict/json/: DSC00961_pred.json
src/: app.py  dataset.py  evaluate.py  predict.py  train.py
src/dataset_utils/: __init__.py  augmentations.py  dataset_split.py  dataset_utils.py
src/hooks/: __init__.py  early_stopping.py  loss_eval.py
