[tool.poetry]
name = "reindeerdrone"
version = "0.1.0"
description = ""
authors = ["Benjamin Cretois <benjamin.cretois@nina.no>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~=3.10.0"
torch = "2.3.1"
matplotlib = "^3.9.0"
opencv-python = "^4.10.0.84"
einops = "0.8.0"
numpy = "2.0.0"
PyYAML = "6.0.1"
tensorboard = "2.17.0"
tensorboard-data-server = "0.7.2"
torchmetrics = "1.4.0.post0"
torchvision = "0.18.1"
tqdm = "4.66.4"
gradio = "5.0.0"
optuna = "^4.0.0"

# Prebulit wheel https://github.com/facebookresearch/detectron2/discussions/5200
detectron2 = {version = "0.6+2a420edpt2.3.1cu121", source = "torch_packages_builder"}
seaborn = "^0.13.2"

[[tool.poetry.source]]
name = "torch_packages_builder"
url = "https://miropsota.github.io/torch_packages_builder"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
